--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
             <div class="card-text">
                 Projeto Conversor de Moedas desenvolvido em HTML5, CSS3 e JavaScript. O projeto consiste em um conversor de dólar americano para real.
             </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 3</h2>
+                    <p><a href="https://codesandbox.io/s/desafio-programa-desenvolve-forked-sjgwd2?file=/index.html" target="_self" rel="external">Confira aqui</a></p>
+                </div>
+            </div>
+            <div class="card-text">
+                Desafio proposto para os alunos destaques do Programa Desenvolve 2022.
+            </div>
         </div>
     </main>
     <footer class="footer">
