adicionando novo projeto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header class="header-container">
@@ -53,11 +54,11 @@
             <div class="card">
                 <div class="card-wrapper">
                     <h2>Projeto 2</h2>
-                    <p><a href="https://iallyfabiane.github.io/Conversor-de-Moedas/" target="_self" rel="external">Confira aqui</a></p>
+                    <p><a href="https://heroic-cheesecake-60a4a0.netlify.app/#" target="_self" rel="external">Confira aqui</a></p>
                 </div>
             </div>
             <div class="card-text">
-                Projeto Conversor de Moedas desenvolvido em HTML5, CSS3 e JavaScript. O projeto consiste em um conversor de dólar americano para real.
+                Projeto Is About Tech-Blog desenvolvido em HTML5, CSS3 e JavaScript.
             </div>
             <div class="card">
                 <div class="card-wrapper">
